[tool.poetry]
name = "letmeknow"
version = "0.0.0"
description = "LetMeKnow integration for Home Assistant"
authors = ["Aidan Timson <aidan@timmo.dev>"]
maintainers = ["Aidan Timson <aidan@timmo.dev>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/timmo001/homeassistant-integration-letmeknow"
repository = "https://github.com/timmo001/homeassistant-integration-letmeknow"
documentation = "https://github.com/timmo001/homeassistant-integration-letmeknow"
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3",
]
packages = []

[tool.poetry.dependencies]
python = "^3.12"
homeassistant = "^2023.6"
letmeknowclient = "1.0.0"

[tool.poetry.group.dev.dependencies]
hass-nabucasa = "0.75.1"
pylint = "3.2.5"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/timmo001/homeassistant-integration-letmeknow/issues"
Changelog = "https://github.com/timmo001/homeassistant-integration-letmeknow/releases"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# format - handled by black
# duplicate-code - unavoidable
# used-before-assignment - false positives with TYPE_CHECKING structures
disable = [
    "duplicate-code",
    "format",
    "too-many-ancestors",
    "too-many-instance-attributes",
    "used-before-assignment",
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components", "homeassistant"]
force-sort-within-sections = true
split-on-trailing-comma = false
combine-as-imports = true
